--- a/main.html
+++ b/main.html
@@ -3,71 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Company Footer</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <footer>
-    <div class="footer-container">
-        <div class="footer-section">
-            <h2>Home</h2>
-            <ul>
-                <li><a href="#">Homepage</a></li>
-                <!-- Add more links if needed -->
-            </ul>
-        </div>
-
-        <div class="footer-section">
-            <h2>About</h2>
-            <ul>
-                <li><a href="#">About Us</a></li>
-                <!-- Add more links if needed -->
-            </ul>
-        </div>
-
-        <div class="footer-section">
-            <h2>Links</h2>
-            <ul>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-                <li><a href="#">Link 3</a></li>
-                <!-- Add more links -->
-            </ul>
-        </div>
-
-        <div class="footer-section">
-            <h2>Services</h2>
-            <ul>
-                <li><a href="#">Service 1</a></li>
-                <li><a href="#">Service 2</a></li>
-                <li><a href="#">Service 3</a></li>
-                <!-- Add more service links -->
-            </ul>
-        </div>
-
-        <div class="footer-section contact-section">
-            <h2>Contact</h2>
-            <p>Contact Number: 8879887262</p>
-            <ul>
-                <li><a href="#">Email Us</a></li>
-                <!-- Add more contact links/info -->
-            </ul>
-        </div>
-
-        <div class="footer-section social-media-section">
-            <h2>Social Media</h2>
-            <div class="social-icons">
-                <a href="#" class="media-icons">Icon 1</a>
-                <a href="#" class="media-icons">Icon 2</a>
-                <a href="#" class="media-icons">Icon 3</a>
-                <a href="#" class="media-icons">Icon 4</a>
-                <a href="#" class="media-icons">Icon 5</a>
-                <!-- Replace "Icon X" with actual icon elements (e.g., <img>, <svg>, or font icons) -->
+        <div class="footer-content">
+            <div class="footer-section">
+                <h2 class="logo">Company</h2>
+                <div class="social-icons">
+                    <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
+                    <a href="#" class="instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#" class="youtube"><i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
+            <div class="footer-columns">
+                <div class="footer-column">
+                    <h3>Links</h3>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Get Started</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h3>Services</h3>
+                    <ul>
+                        <li><a href="#">App Design</a></li>
+                        <li><a href="#">Web Design</a></li>
+                        <li><a href="#">Logo Design</a></li>
+                        <li><a href="#">Banner Design</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h3>Other services</h3>
+                    <ul>
+                        <li><a href="#">SEO</a></li>
+                        <li><a href="#">Content Marketing</a></li>
+                        <li><a href="#">Prints</a></li>
+                        <li><a href="#">Social Media</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h3>Contact</h3>
+                    <ul>
+                        <li><a href="#">+91 8879887262</a></li>
+						<li><a href="#">+91 8879887262</a></li>
+                        <li><a href="#">contact@company.com</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
-</footer>
-
-    <script src="app.js"></script>
+        <div class="footer-bottom">
+            <p>Copyright © 2021 Company.</p>
+            <a href="#">Privacy Policy</a>
+        </div>
+    </footer>
 </body>
 </html>
