--- a/main.html
+++ b/main.html
@@ -13,15 +13,15 @@
             <div class="footer-section">
                 <h2 class="logo">Company</h2>
                 <div class="social-icons">
-                    <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="#" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="#" class="youtube"><i class="fab fa-youtube"></i></a>
+                    <a href="#" class="media-icons facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="media-icons twitter"><i class="fab fa-twitter"></i></a>
+                    <a href="#" class="media-icons instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="media-icons linkedin"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#" class="media-icons youtube"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
             <div class="footer-columns">
-                <div class="footer-column">
+                <div class="footer-column link-boxes">
                     <h3>Links</h3>
                     <ul>
                         <li><a href="#">Home</a></li>
@@ -30,7 +30,7 @@
                         <li><a href="#">Get Started</a></li>
                     </ul>
                 </div>
-                <div class="footer-column">
+                <div class="footer-column link-boxes">
                     <h3>Services</h3>
                     <ul>
                         <li><a href="#">App Design</a></li>
@@ -39,7 +39,7 @@
                         <li><a href="#">Banner Design</a></li>
                     </ul>
                 </div>
-                <div class="footer-column">
+                <div class="footer-column link-boxes">
                     <h3>Other services</h3>
                     <ul>
                         <li><a href="#">SEO</a></li>
@@ -48,7 +48,7 @@
                         <li><a href="#">Social Media</a></li>
                     </ul>
                 </div>
-                <div class="footer-column">
+                <div class="footer-column link-boxes">
                     <h3>Contact</h3>
                     <ul>
                         <li><a href="#">+91 8879887262</a></li>
